2007-12-26  Richard Stallman  <rms@gnu.org>

	* files.el (conf-mode-maybe): New function.
	(auto-mode-alist): Use conf-mode-maybe for .conf etc.

2007-12-26  Martin Rudalics  <rudalics@gmx.at>

	* textmodes/fill.el (fill-find-break-point): Fix doc-string typo.

2007-12-25  Dan Nicolaescu  <dann@ics.uci.edu>

	* progmodes/asm-mode.el (asm-mode-map): Add a major mode menu.

2007-12-25  Richard Stallman  <rms@gnu.org>

	* comint.el (comint-mode-map): Explicitly bind `delete' and `kp-delete'
	so they never do EOF.

2007-12-23  Richard Stallman  <rms@gnu.org>

	* dired-aux.el: Load dired.el at run time too.

	* faces.el (copy-face): Create the new face explicitly if it
	does not exist already.

2007-12-23  Andreas Schwab  <schwab@suse.de>

	* files.el (switch-to-buffer-other-frame): Return the buffer
	switched to.

2007-12-23  Juri Linkov  <juri@jurta.org>

	* term/mac-win.el (mac-apple-event-map): Bind About Emacs menu
	item to about-emacs instead of display-splash-screen.

2007-12-22  Eli Zaretskii  <eliz@gnu.org>

	* simple.el (minibuffer-history, shell-command-history)
	(set-variable-value-history):
	* replace.el (regexp-history):
	* international/mule-cmds.el (input-method-history):
	* files.el (file-name-history): Add reference to history-length in
	the doc string.

2007-12-22  Richard Stallman  <rms@gnu.org>

	* comint.el (comint-password-prompt-regexp): Match `Enter Password'.

2007-12-21  Jason Rumney  <jasonr@gnu.org>

	* find-dired.el (find-name-arg): New custom variable.
	(find-name-dired): Use it.
	(find-dired-find-program): Remove.
	(find-dired): Use find-program.
	(find-grep-dired): Use grep-program.

	* progmodes/grep.el (rgrep): Use find-name-arg.

2007-12-21  Martin Rudalics  <rudalics@gmx.at>

	* autoinsert.el (auto-insert-alist): Remove nonsensical precision
	specifier from format-string.  Reported by Ye Wenbin.

2007-12-19  Martin Rudalics  <rudalics@gmx.at>

	* cus-start.el: Use correct group name for members of mode-line group.
