@@ -1,3 +1,8 @@
+2007-12-27  Richard Stallman  <rms@gnu.org>
+
+	* progmodes/compile.el (compilation-start): Set initial visible
+	point properly even when compilation buffer already current.
+
 2007-12-26  Richard Stallman  <rms@gnu.org>
 
 	* files.el (conf-mode-maybe): New function.
